--- a/package.json
+++ b/package.json
@@ -4,24 +4,23 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-    
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
-
     "author": "",
-    "license": "ISC", 
+    "license": "ISC",
     "keywords": [],
     "description": "",
     "dependencies": {
-    "body-parser": "^1.20.2",
-    "express": "^4.19.2",
-    "mysql2": "^3.9.2"
-    
-},
-  
-"devDependencies": {
-       
-    "nodemon": "^3.1.0"
-    
+        "bcrypt": "^5.1.1",
+        "body-parser": "^1.20.2",
+        "ejs": "^3.1.10",
+        "express": "^4.19.2",
+        "express-session": "^1.18.0",
+        "mysql2": "^3.9.2",
+        "passport": "^0.7.0",
+        "passport-google-oauth2": "^0.2.0"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.0"
     }
 }
