--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
         "express-session": "^1.18.0",
         "mysql2": "^3.9.2",
         "passport": "^0.7.0",
-        "passport-google-oauth2": "^0.2.0"
+        "passport-facebook": "^3.0.0",
+        "passport-google-authcode": "^0.1.5",
+        "passport-google-oauth2": "^0.2.0",
+        "passport-google-oauth20": "^2.0.0",
+        "passport-linkedin-oauth2": "^2.0.0"
     },
     "devDependencies": {
         "nodemon": "^3.1.0"
