--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
         "ejs": "^3.1.10",
         "express": "^4.19.2",
         "express-session": "^1.18.0",
-        "mysql2": "^3.9.2",
+        "js": "^0.1.0",
+        "mysql2": "^3.9.7",
         "passport": "^0.7.0",
         "passport-facebook": "^3.0.0",
         "passport-google-authcode": "^0.1.5",
         "passport-google-oauth2": "^0.2.0",
         "passport-google-oauth20": "^2.0.0",
-        "passport-linkedin-oauth2": "^2.0.0"
+        "passport-linkedin-oauth2": "^2.0.0",
+        "path": "^0.12.7",
+        "url": "^0.11.3"
     },
     "devDependencies": {
         "nodemon": "^3.1.0"
